@@ -117,6 +117,7 @@ public class DatabaseObjectTreeObject extends TreeParent implements TreeObjectLi
 	public static final String P_QNAME = "#qname";
 	public static final String P_NAME = "#name";
 	public static final String P_EXPORTED = "#exported";
+	public static final String P_MIN_VERSION = "#minversion";
 
 	public String objectClassName = null;
 	public boolean canPaste = false;
@@ -309,6 +310,10 @@ public class DatabaseObjectTreeObject extends TreeParent implements TreeObjectLi
         vPropertyDescriptors.add(propertyDescriptor);
         
         propertyDescriptor = new PropertyDescriptor(P_EXPORTED, "Exported");
+        propertyDescriptor.setCategory("Information");
+        vPropertyDescriptors.add(propertyDescriptor);
+        
+        propertyDescriptor = new PropertyDescriptor(P_MIN_VERSION, "Min version");
         propertyDescriptor.setCategory("Information");
         vPropertyDescriptors.add(propertyDescriptor);
         
@@ -700,6 +705,9 @@ public class DatabaseObjectTreeObject extends TreeParent implements TreeObjectLi
 		else if (propertyName.equals(P_EXPORTED)) {
 			return databaseObject.getProject().getInfoForProperty("exported");
 		}
+		else if (propertyName.equals(P_MIN_VERSION)) {
+			return databaseObject.getProject().getMinVersion();
+		}
 		else {
 			try {
 				java.beans.PropertyDescriptor databaseObjectPropertyDescriptor = getPropertyDescriptor(propertyName);
@@ -735,7 +743,7 @@ public class DatabaseObjectTreeObject extends TreeParent implements TreeObjectLi
 	            if (done) {
 	            	// do nothing
 	            } else if (value instanceof Boolean) {
-	            	value = ((Boolean) value).booleanValue() ? new Integer(0) : new Integer(1); 
+	            	value = ((Boolean) value).booleanValue() ? Integer.valueOf(0) : Integer.valueOf(1); 
 	            }
 	            else if ((pec != null) && (PropertyWithTagsEditor.class.isAssignableFrom(pec) || Enum.class.isAssignableFrom(pec))) {
 	            	if (!(value instanceof Integer)) {
@@ -746,19 +754,19 @@ public class DatabaseObjectTreeObject extends TreeParent implements TreeObjectLi
 	        				int i;
 	        				for (i = 0 ; i < tags.length ; i++) {
 	        					if (tags[i].equals(value)) {
-	        						value = new Integer(i);
+	        						value = Integer.valueOf(i);
 	        						break;
 	        					}
 	        				}
 	
 	        				// if we did not find our string in the tag list set value to index 0
 	        				if (i == tags.length) {
-	        					value = new Integer(0);
+	        					value = Integer.valueOf(0);
 	        					String message = "Incorrect property \"" + propertyName + "\" value for the object \"" + databaseObject.getName() + "\".";
 	        					ConvertigoPlugin.logWarning(message);
 	        				}
 		        		} else if (Enum.class.isAssignableFrom(pec)) {
-		        			value = new Integer(((Enum<?>) value).ordinal());
+		        			value = Integer.valueOf(((Enum<?>) value).ordinal());
 		        		} else if (StringComboBoxPropertyDescriptor.class.isAssignableFrom(pec)) {
 		        			// nothing to do: value is a string
 		        		}
@@ -769,7 +777,7 @@ public class DatabaseObjectTreeObject extends TreeParent implements TreeObjectLi
 	        			
 		        		for (int i = 0 ; i < emulatorClassNames.length ; i++) {
 	        				if (emulatorClassNames[i].equals(value)) {
-	        					value = new Integer(i);
+	        					value = Integer.valueOf(i);
 	        					break;
 	        				}
 	        			}
