@@ -491,8 +491,8 @@ public class CicsTransaction extends Transaction {
 		if (elt != null) {
 			if (v == null) {
 				v = new Vector<Integer>();
-				v.add(new Integer(0));
-				v.add(new Integer(0));
+				v.add(Integer.valueOf(0));
+				v.add(Integer.valueOf(0));
 			}
 			if (elt.getNodeType() == Node.ELEMENT_NODE) {
 				fillXMLElement(elt, stream, v);
@@ -619,8 +619,8 @@ public class CicsTransaction extends Transaction {
 				elt.appendChild((elt.getOwnerDocument()).createTextNode(value));
 				offset += bytes;
 				
-				v.set(0, new Integer(pos));
-				v.set(1, new Integer(offset));
+				v.set(0, Integer.valueOf(pos));
+				v.set(1, Integer.valueOf(offset));
 			}
 		}
 	}
