@@ -78,7 +78,7 @@ public class CanCreateSource extends XmlService {
                     Step targetStep = (Step) ((targetDbo instanceof StepVariable) ? ((StepVariable) targetDbo).getParent() : targetDbo);
 
                     // Check for drop to a step in the same sequence
-                    Long key = new Long(stepSource.getPriority());
+                    Long key = Long.valueOf(stepSource.getPriority());
                     Step sourceStep = targetStep.getSequence().loadedSteps.get(key);
                     if ((sourceStep != null) && (!targetStep.equals(sourceStep))) {
                         // Check for drop on a 'following' step
